# cloudrun_airflow

./: README.md
application/: Dockerfile  main.py  pyproject.toml  readme.md
dags/: .env  simpleapp_dag_v1.py
